--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -7,7 +7,9 @@ trigger:
 - '*''
 
 pool:
-  vmImage: 'ubuntu-18.04'
+  vmImage: 'windows-latest'
+  demands:
+  - npm
 
 variables:
   solution: '**/*.sln'
